
syntax = "proto3";

package api.global;

import "api/global/join_leave.proto";
import "std/responses.proto";
import "api/global/event.proto";

service GlobalService {
  rpc JoinLeave (api.global.JoinLeaveGame) returns (std.StandardResponse);
  rpc StreamEvents (stream api.global.GlobalEvent) returns (stream api.global.GlobalEvent);
}

option go_package = "github.com/oof-gg/oof-protobufs/generated/go/api/global";