syntax = "proto3";

package v1.api.game;

import "v1/std/regions.proto";


/// Message joining or leaving a game
message JoinLeaveGame {
  string player_id = 1;
  string game_id = 2;
  Action action = 3;
  optional string team_id = 4;
  optional string session_id = 5;
  optional v1.std.RegionEnum region = 6;
  string session_id = 7;

  enum Action {
    JOIN = 0;
    LEAVE = 1;
  }
}

option go_package = "github.com/oof-gg/oof-protobufs/generated/go/v1/api/game";